image overflow fix. Image background is changed to grey black.

--- a/src/index.css
+++ b/src/index.css
@@ -191,10 +191,12 @@ a.ui.card:hover, .ui.fluid.card:hover {
 }
 
 .imageContainer .overlay {
-  background-color: #000;
+  background-color: #393939;
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
+  border-radius: 5px;
 }
 
 .initialAltText {
